<resources>
    <string name="app_name">OnlineBank</string>
    <string name="title_activity_account">account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Hello, %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_more_accounts">Add more Accounts</string>
    <string name="settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="toSeePassword">Touch to reveal/hide password</string>
    <string name="sign_in">Sign in</string>
    <string name="your_email">Your Email</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="account_number">Account Number</string>
    <string name="password">Password</string>
    <string name="welcome_to_my_bank">Welcome to my bank</string>
    <string name="please_fill_up_your_info">Please fill up your info</string>
    <string name="confirm_n_password">Confirm   Password</string>
    <string name="submit">Submit</string>
    <string name="transaction_n_password">Transaction \n password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nin">NIN</string>
    <string name="cell">Cell</string>
    <string name="address">Address</string>
    <string name="confirm_ntransaction_npassword">Confirm Transaction password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="transfer">Transfer</string>
    <string name="refresh">Refresh</string>
    <string name="balance">Balance</string>
    <string name="account_number_with_colon">Account Number:</string>
    <string name="balance_with_colon">Balance:</string>
    <string name="FLAG">flag</string>
    <string name="next">Next</string>
    <string name="negative_trans_value">-%1$s</string>
    <string name="no_more_records">No more records</string>
    <string name="loading">Loading</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="transaction_date">Transaction Date:</string>
    <string name="transaction_from">From:</string>
    <string name="transaction_to">To:</string>
    <string name="borrowing_sign">Borrowing\nSign:</string>
    <string name="value">Value</string>
    <string name="post_transaction_balance">Balance after\nTransaction</string>
    <string name="transaction_channel">Transaction\nChannel</string>
    <string name="memo">Memo</string>
    <string name="payees_maintenance">Payees Maintenance</string>
    <string name="edit">Edit</string>
    <string name="delete_this_payee">delete this payee</string>
    <string name="add_a_new_payee">Add a new Payee</string>
    <string name="short_account_num">Account number should be 8 digits</string>
    <string name="dup_account_num">Account number has been in Payees List</string>
    <string name="submitting">Submitting</string>
    <string name="empty_names_fields">Names are necessary</string>
    <string name="no_modification">No modification found</string>
    <string name="success">Success!</string>
    <string name="linked_account_title">Linked accounts</string>
    <string name="payee_title">Payees</string>
    <string name="withdrawals_password">Withdrawals Password</string>
    <string name="name">Name</string>
    <string name="password_reset">Password Reset</string>
    <string name="transaction_password_reset">Transaction Password Reset</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="please_enter_new_password">Please enter new Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="please_enter_new_transaction_password">Please enter new Transaction Password</string>
    <string name="national_identity_number">National Identity Number</string>
    <string name="checking">Checking</string>
    <string name="validate">Validate</string>
    <string name="nickname">Nickname</string>
    <string name="enter_the_transaction_amount">Transaction Amount</string>
    <string name="please_confirm">Please Confirm:</string>
    <string name="log_out">Log out</string>
    <string name="select_a_payment_account">Select a payment account</string>
    <string name="redo">Redo</string>
    <string name="borrow">Borrow</string>
    <string name="loan">Loan</string>
    <string name="mobile_client">Mobile Client</string>
    <string name="web">Web</string>
    <string name="bank_counter">Bank Counter</string>
</resources>
