<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.transfer"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_from"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_payment_account"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <include
            android:id="@+id/included_select"
            layout="@layout/item_cardview_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_to" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/recipient_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            android:gravity="center"
            android:layout_weight="3"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/recipient_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:inputType="number"
                android:maxLength="8"
                />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/payee_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_contacts_black_24dp"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            android:gravity="center"
            android:layout_weight="1"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:hint="@string/first_name"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            android:gravity="center"
            android:layout_weight="1"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                android:maxLength="10"
                />

        </android.support.design.widget.TextInputLayout>

    </TableRow>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/value_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/value_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_transaction_amount"
            android:ems="10"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:inputType="numberDecimal"
            android:maxLength="20" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memo"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/memo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        android:gravity="center"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/memo_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLength="100"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />



</TableLayout>